# linkml-round-trips

./: .gitignore  Makefile  README.md  curated.yaml  curated_organisms.txt  enums_to_curateable.tsv  merge_dont_interleave.py  organisms.yaml  pyproject.toml  sandbox.ipynb  test_sntc.py
linkml_round_trips/: curated_to_enums.py  demos.py  enums_to_curateable.py  get_dependencies.py  interleave_classes.py  interleave_mergeds.py  just_exacts.py  just_meta.py  linkml_to_dh_light.py  linkml_to_dh_no_annotations.py  merge_dont_interleave.py  soil_nmdc_template_compiled.py
notebooks/: sandbox.ipynb
