[tool.poetry]
name = "linkml-round-trips"
version = "0.1.0"
description = ""
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.1.13"
crdch-model = "^1.1.5"
nmdc-schema = "^2021.11.15-rc.1"
linkml-model = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demos = "linkml_round_trips.demos:hello"
